fix/issue-106: Aligning condition name in next line

--- a/projects/abtesting/src/app/features/dashboard/home/pages/view-experiment/view-experiment.component.scss
+++ b/projects/abtesting/src/app/features/dashboard/home/pages/view-experiment/view-experiment.component.scss
@@ -59,7 +59,6 @@ $font-size-small: 15px;
       display: block;
       margin: 14px 0 10px;
       color: var(--grey-3);
-      padding-left: 12px;
     }
 
     &-create-date {
